--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
                         ENG:
                         <ul>
                             <li>
-                                Welcome...
+                                Hi everyone... nice to see that so many could be here today...
+                            </li>
+                            <li>
+                                My name is Eirik and this is Magne...
                             </li>
                             <li>
                                 We will start the Elasticsearch workshop with an presentation...
                             </li>
                             <li>
-                                The presentation will take about one hour... after that we will start with workshop tasks...
+                                The presentation will last about one hour... after that we will start with workshop tasks...
                             </li>
                             <li>
                                 We'll go around and help with software installation after the presentation...
@@ -113,6 +116,9 @@
                 ENG:
                 <ul>
                     <li>The agenda for the presentation is as follows...</li>
+                    <li>Up until now we've gone through the basics...</li>
+                    <li>Then we are going more into details.... with, something called mapping...</li>
+                    <li>Finally we are going to explain the workshop tasks</li>
                 </ul>
                 NOR:
                 <ul>
@@ -163,7 +169,7 @@
                     ENG:
                     <ul>
                         <li>
-                            To make your search efficient (fast), a search engine will pre-process the documents and make a index
+                            Therefore, to make your search efficient/fast, a search engine will pre-process the documents and make a index
                         </li>
                     </ul>
                     NOR:
@@ -362,6 +368,13 @@
 
                 <p>Logs > Logstash > Elasticsearch > Kibana</p>
                 <img data-src="images/elk.png"/>
+                <aside class="notes">
+                    <ul>
+                        <li>One example of anlaytics is the ELK stack</li>
+                        <li>Lets say you have several applications running on different servers,
+                            and you want to show its logs in a common place</li>
+                    </ul>
+                </aside>
             </section>
 
             <section>
@@ -496,6 +509,13 @@ cd elasticsearch-2.2.0/bin
                         <li>DELETE (delete)</li>
                     </ul>
                 </ul>
+                <aside class="notes">
+                    <ul>
+                        <li>If you have not worked with REST API before...</li>
+                        <li>POST, GET, PUT, DELTE is HTTP verbs...</li>
+                        <li>With represents create, read, update and delete operations (CRUD)</li>
+                    </ul>
+                </aside>
             </section>
 
             <section>
