Added link to tasks in github

--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,15 @@ Feature: Topic of the task
 							<li>Your task is to replace the `{ todo }` with the correct query
                             </li>
 							<li>A query needs to return a correct response { subset } to be passed</li>
+                            <li>
+                                The tasks are under <a href="https://github.com/WorkshopDudes/elasticsearch-workshop/tree/master/tests_bdd" target="_blank">tests_bdd/</a>
+                            </li>
 						</ul>
+                        <aside class="notes">
+                            <ul>
+                                <li>The { subset } is already defined in the tasks!</li>
+                            </ul>
+                        </aside>
 					</section>
 
                     <section>
@@ -1310,6 +1318,7 @@ Feature: Topic of the task
 }
 							</code></pre>
 						</div>
+
 					</section>
 
 					<section>
