Rename to workshop tasks

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<li class="fragment">Highlighting</li>
                     </ul>
                 </li>
-                <li class="fragment">Workshop</li>
+                <li class="fragment">Workshop tasks</li>
             </ul>
             <aside class="notes">
                 ENG:
@@ -1208,7 +1208,7 @@ $curl -X PUT localhost:9200/books/computer/1 --data
 				</section>
 				<section>
 					<section>
-						<h2>Workshop</h2>
+						<h2>Workshop tasks</h2>
 					</section>
 
 					<section>
