Added sense extension

--- a/index.html
+++ b/index.html
@@ -1253,9 +1253,6 @@ Feature: Topic of the task
 							<li>Your task is to replace the `{ todo }` with the correct query
                             </li>
 							<li>A query needs to return a correct response { subset } to be passed</li>
-                            <li>
-                                The tasks are under <a href="https://github.com/WorkshopDudes/elasticsearch-workshop/tree/master/tests_bdd" target="_blank">tests_bdd/</a>
-                            </li>
 						</ul>
                         <aside class="notes">
                             <ul>
@@ -1291,7 +1288,7 @@ Feature: Topic of the task
                     </section>
 
                     <section>
-                        <h2>Known issues - Tab in windows is causing trouble</h2>
+                        <h2>Known issues - Tab is causing trouble</h2>
                         <ul>
                             <li>Please use spaces instead of tab for indentations</li>
                         </ul>
@@ -1319,6 +1316,24 @@ Feature: Topic of the task
 						</div>
 
 					</section>
+
+                    <section>
+                        <h2>The tasks</h2>
+                        <ul>
+                            <li>
+                                The tasks can be found under <a href="https://github.com/WorkshopDudes/elasticsearch-workshop/tree/master/tests_bdd" target="_blank">tests_bdd/</a>
+                            </li>
+                            <li>
+                                Use the Chrome extension <a href="https://chrome.google.com/webstore/detail/sense-beta/lhjgkmllcaadmopgmanpapmpjgmfcfig" target="_blank">Sense</a> during the creation of queries
+                                <ul>
+                                    <li>Better feedback</li>
+                                    <li>Autocomplete</li>
+                                    <li>...</li>
+                                </ul>
+                            </li>
+                            <li>When the query is correct, paste it into the task and run it for validation</li>
+                        </ul>
+                    </section>
 
 					<section>
 						<h2>Running</h2>
